<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="178dp"
        android:layout_height="33dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:text="@string/nombre2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="588dp"
        android:backgroundTint="#2196F3"
        android:onClick="Regresar"
        android:text="@string/regresar"
        android:textColor="#212121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="178dp"
        android:layout_height="36dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/apellido2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="182dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="156dp"
        android:text="@string/sueldo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="273dp"
        android:layout_height="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="204dp"
        android:text="@string/igss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="287dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="260dp"
        android:text="@string/irtra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="286dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="308dp"
        android:text="@string/intecap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="287dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="360dp"
        android:text="@string/isr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv8"
        android:layout_width="294dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="408dp"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="472dp"
        android:text="@string/tv2"
        android:textColor="#D80F0F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="84dp"
        android:background="#D5D5D5"
        android:text="@string/sub"
        android:textColor="#455A64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv8" />

</androidx.constraintlayout.widget.ConstraintLayout>